@@ -268,3 +268,4 @@ QPDF xref space 2
 qpdf pages range omitted at end 0
 qpdf pages range omitted in middle 0
 qpdf npages 0
+QPDF already reserved object 0
